Updated language files (thanks Peachy and eros)

--- a/lang/French.ini
+++ b/lang/French.ini
@@ -4,39 +4,39 @@ DISCONNECTED = "@ s'est déconnecté"
 LEFT_THIS_LEVEL = "@ a quitté ce niveau"
 ENTERED_THIS_LEVEL = "@ est entré dans ce niveau"
 ENTERED = "@ est entré dans\n#"
-SERVER_CLOSED = "\\#ffa0a0\\Déconnecté:\\#dcdcdc\\ le serveur est fermé"
-DISCORD_ERROR = "Erreur Discord.\nPour régler le problème, vous pouvez essayer: \n1. Fermer le jeu.\n2. Relancer Discord.\n3. Lancer le jeu."
-DISCORD_DETECT = "\\#ffa0a0\\Erreur:\\#c8c8c8\\ Discord n'est pas détecté.\n\\#a0a0a0\\Essayez de fermer le jeu, relancez Discord, lancez le jeu à nouveau."
-DISCONNECT_FULL = "\\#ffa0a0\\Déconnecté:\\#c8c8c8\\ La partie est remplie."
+SERVER_CLOSED = "\\#ffa0a0\\Déconnecté:\\#dcdcdc\\ Le serveur est fermé."
+DISCORD_ERROR = "Erreur Discord.\nPour régler le problème, essayez de: \n1. Fermer le jeu.\n2. Redémarrer Discord.\n3. Relancer le jeu."
+DISCORD_DETECT = "\\#ffa0a0\\Erreur:\\#c8c8c8\\ Discord n'est pas détecté.\n\\#a0a0a0\\Essayez de fermer le jeu, relancez Discord, puis relancez le jeu."
+DISCONNECT_FULL = "\\#ffa0a0\\Déconnecté:\\#c8c8c8\\ Le groupe est complet."
 DISCONNECT_KICK = "\\#ffa0a0\\Déconnecté:\\#c8c8c8\\ Le serveur vous a expulsé."
 DISCONNECT_BAN = "\\#ffa0a0\\Déconnecté:\\#c8c8c8\\ Le serveur vous a banni."
 DISCONNECT_REJOIN = "\\#ffa0a0\\Déconnecté:\\#c8c8c8\\ Reconnexion..."
-DISCONNECT_CLOSED = "\\#ffa0a0\\Déconnecté:\\#c8c8c8\\ L'hébergeur a arrêté la connexion."
+DISCONNECT_CLOSED = "\\#ffa0a0\\Déconnecté:\\#c8c8c8\\ L'hôte s'est déconnecté."
 DISCONNECT_BIG_MOD = "Le mod utilisé est trop volumineux.\nDéconnexion."
 DIED = "@ est mort"
 DEBUG_FLY = "@ a activé le mode vol (débug) "
 
 [CHAT]
-KICKING = "Vous avez expulsé '@'!"
-BANNING = "Vous avez banni '@'!"
-SERVER_ONLY = "Seul le serveur peut exécuter cette commande."
-PERM_BANNING = "Vous avez banni définitevement '@'!"
-ADD_MODERATOR = "Vous avez ajouté '@' en tant que modérateur!"
+KICKING = "Vous avez expulsé '@' !"
+BANNING = "Vous avez banni '@' !"
+SERVER_ONLY = "Seul l'hôte peut utiliser cette commande."
+PERM_BANNING = "Vous avez banni définitivement '@' !"
+ADD_MODERATOR = "Vous avez ajouté '@' en tant que modérateur !"
 PLAYERS = "Joueurs"
 NO_PERMS = "Vous n'avez pas la permission d'utiliser cette commande."
-PLAYER_NOT_FOUND = "N'a pas pu trouver le joueur."
+PLAYER_NOT_FOUND = "Joueur introuvable."
 SELF_KICK = "Vous ne pouvez pas vous expulser vous même."
 SELF_BAN = "Vous ne pouvez pas vous bannir vous même."
 SELF_MOD = "Vous ne pouvez pas faire de vous même un modérateur."
-KICK_CONFIRM = "Êtes-vous sûr de vouloir expulser '@'?\nTapez '\\#a0ffa0\\/confirm\\#fff982\\' pour l'expulser."
-BAN_CONFIRM = "Êtes-vous sûr de vouloir bannir '@'?\nTapez '\\#a0ffa0\\/confirm\\#fff982\\' pour le bannir."
-PERM_BAN_CONFIRM = "Êtes-vous sûr de vouloir bannir définitivement '@'?\nTapez '\\#a0ffa0\\/confirm\\#fff982\\' pour le bannir."
-MOD_CONFIRM = "Êtes-vous sûr de vouloir faire de '@' un modérateur?\nTapez '\\#a0ffa0\\/confirm\\#fff982\\'."
+KICK_CONFIRM = "Êtes-vous sûr de vouloir expulser '@' ?\nTapez '\\#a0ffa0\\/confirm\\#fff982\\' pour l'expulser."
+BAN_CONFIRM = "Êtes-vous sûr de vouloir bannir '@' ?\nTapez '\\#a0ffa0\\/confirm\\#fff982\\' pour le bannir."
+PERM_BAN_CONFIRM = "Êtes-vous sûr de vouloir bannir définitivement '@' ?\nTapez '\\#a0ffa0\\/confirm\\#fff982\\' pour le bannir."
+MOD_CONFIRM = "Êtes-vous sûr de vouloir faire de '@' un modérateur ?\nTapez '\\#a0ffa0\\/confirm\\#fff982\\'."
 PLAYERS_DESC = "/players - Liste tous les joueurs et leurs ID"
 KICK_DESC = "/kick [NAME|ID] - Expulse ce joueur de la partie actuelle"
 BAN_DESC = "/ban [NAME|ID] - Bannit ce joueur de la partie actuelle"
-PERM_BAN_DESC = "/permban [NAME|ID] - Bannit ce joueur de n'importe quelle partie que vous hébergerez"
-MOD_DESC = "/moderator [NAME|ID] - Rend ce joueur capable d'exécuter des commandes tel que /kick, /ban, /permban sur n'importe quelle partie que vous hébergerez"
+PERM_BAN_DESC = "/permban [NAME|ID] - Bannit ce joueur de n'importe quelle partie dont vous êtes l'hôte"
+MOD_DESC = "/moderator [NAME|ID] - Rend ce joueur capable d'utiliser des commandes tel que /kick, /ban, /permban sur n'importe quelle partie dont vous êtes l'hôte"
 UNRECOGNIZED = "Cette commande n'est pas reconnue."
 MOD_GRANTED = "\\#fff982\\Vous êtes désormais un modérateur."
 
@@ -53,22 +53,22 @@ ANALOG_CAMERA = "Caméra Analogique"
 MOUSE_LOOK = "Souris comme Caméra"
 INVERT_X = "Inverser l'axe X"
 INVERT_Y = "Inverser l'axe Y"
-X_SENSITIVITY = "Sensibilité en X"
-Y_SENSITIVITY = "Sensibilité en Y"
+X_SENSITIVITY = "Sensibilité de l'axe X"
+Y_SENSITIVITY = "Sensibilité de l'axe Y"
 AGGRESSION = "Aggression"
 PAN_LEVEL = "Niveau de centrage"
 DECELERATION = "Décélération"
 
 [CHEATS]
-CHEATS = "CODES TRICHES"
+CHEATS = "CODES DE TRICHE"
 MOON_JUMP = "Saut Antigravité"
 GOD_MODE = "Mode Invincible"
 INFINITE_LIVES = "Vies Infinies"
 SUPER_SPEED = "Super Vitesse"
 RESPONSIVE_CONTROLS = "Contrôles Réactifs"
 RAPID_FIRE = "Tir Rapide (A)"
-BLJ_ANYWHERE = "BLJ n'importe où"
-ALWAYS_TRIPLE_JUMP = "Triples Sauts Infinis"
+BLJ_ANYWHERE = "BLJ N'importe Où"
+ALWAYS_TRIPLE_JUMP = "Triple Sauts Infinis"
 
 [CONTROLS]
 CONTROLS = "CONTRÔLES"
@@ -114,10 +114,10 @@ FRAME_LIMIT = "Limite de FPS"
 FAST = "Rapide"
 ACCURATE = "Précis"
 INTERPOLATION = "Interpolation"
-NEAREST = "Le plus proche"
+NEAREST = "Au plus proche"
 LINEAR = "Linéaire"
 TRIPOINT = "3 Points"
-FILTERING = "Filtration"
+FILTERING = "Filtrage des Textures"
 D0P5X = "x0.5"
 D1X = "x1"
 D1P5X = "x1.5"
@@ -125,7 +125,7 @@ D3X = "x3"
 D10X = "x10"
 D100X = "x100"
 DRAW_DISTANCE = "Distance d'affichage"
-DYNOS_PACKS = "DynOS Packs"
+DYNOS_PACKS = "Packs DynOS"
 
 [DYNOS]
 DYNOS = "DYNOS"
@@ -144,12 +144,12 @@ MODS = "MODS"
 [HOST_SAVE]
 SAVE_TITLE = "SAUVEGARDE"
 ERASE_TITLE = "EFFACER"
-CONFIRM = "Êtes-vous sûr de vouloir supprimer cette sauvegarde?"
+CONFIRM = "Êtes-vous sûr de vouloir supprimer cette sauvegarde ?"
 ERASE = "effacer"
 
 [HOST_SETTINGS]
 SETTINGS = "PARAMÈTRES"
-NONSOLID = "Non solide"
+NONSOLID = "Intangible"
 SOLID = "Solide"
 FRIENDLY_FIRE = "Dégâts alliés"
 PLAYER_INTERACTION = "Interactions joueurs"
@@ -203,18 +203,18 @@ MAIN_MENU = "MENU"
 LEVEL = "Niveau"
 USE_STAGE_MUSIC = "Utiliser la musique du niveau"
 RANDOM_STAGE = "Niveau aléatoire"
-PLAY_VANILLA_DEMOS = "Jouer les démos vanilla"
+PLAY_VANILLA_DEMOS = "Jouer les démos"
 
 [MISC]
-DEBUG_TITLE = "DEBOGAGE"
-FIXED_COLLISIONS = "Collisions Réparées"
+DEBUG_TITLE = "DÉBOGAGE"
+FIXED_COLLISIONS = "Collisions Améliorées"
 LUA_PROFILER = "Profileur Lua"
-DEBUG_PRINT = "Impressions de Débogage"
+DEBUG_PRINT = "Affichage du Débogage"
 DEBUG_INFO = "Infos de Débogage"
 DEBUG_ERRORS = "Erreurs de Débogage"
 MISC_TITLE = "AUTRES"
 PAUSE_IN_SINGLEPLAYER = "Pause en Solo"
-DISABLE_POPUPS = "Désactiver les Popups"
+DISABLE_POPUPS = "Désactiver les Pop-ups"
 MENU_OPTIONS = "Options du menu"
 DEBUG = "Débogage"
 LANGUAGE = "Langue"
@@ -233,8 +233,8 @@ MISC = "Autres Paramètres"
 
 [PAUSE]
 QUIT_TITLE = "QUITTER"
-QUIT_HOST = "Êtes-vous sûr de vouloir arrêter d'héberger?"
-QUIT_CLIENT = "Êtes-vous sûr de vouloir vous déconnecter?"
+QUIT_HOST = "Êtes-vous sûr de vouloir arrêter d'héberger ?"
+QUIT_CLIENT = "Êtes-vous sûr de vouloir vous déconnecter ?"
 PAUSE_TITLE = "PAUSE"
 PLAYER = "Joueurs"
 DYNOS_PACKS = "DynOS Packs"
@@ -255,8 +255,8 @@ HAIR = "Cheveux"
 SKIN = "Peau"
 CAP = "Casquette"
 PALETTE = "PALETTE"
-PART = "Partie"
-HEX_CODE = "Code Hex"
+PART = "Partie du corps"
+HEX_CODE = "Code Couleur"
 RED = "Rouge"
 GREEN = "Vert"
 BLUE = "Bleu"
@@ -294,7 +294,7 @@ FIRE_WARIO = "Wario de feu"
 BUSY_BEE = "Abeille"
 FORTRESS = "Forteresse"
 BATTLEMENTS = "Remparts"
-BLUEBERRY_PIE = "Tarte Myrtille"
+BLUEBERRY_PIE = "Tarte Myrtilles"
 RASPBERRY = "Framboise"
 BUBBLEGUM = "Bubblegum"
 ICE_MARIO = "Mario de glace"
@@ -309,8 +309,8 @@ ACT = "Épisode"
 
 [SOUND]
 SOUND = "AUDIO"
-MASTER_VOLUME = "Volume Principal"
-MUSIC_VOLUME = "Volume de la Musique"
+MASTER_VOLUME = "Volume principal"
+MUSIC_VOLUME = "Volume de la musique"
 SFX_VOLUME = "Volume des effets sonores"
 ENV_VOLUME = "Volume de l'environnement"
 
