--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -82,10 +82,10 @@ RUMBLE_STRENGTH = "Fuerza de Vibración"
 
 CHAT = "Chat"
 PLAYERS = "Jugadores"
-D_UP = "D Arriba"
-D_DOWN = "D Abajo"
-D_LEFT = "D Izquierda"
-D_RIGHT = "D Derecha"
+D_UP = "Cruz Arriba"
+D_DOWN = "Cruz Abajo"
+D_LEFT = "Cruz Izquierda"
+D_RIGHT = "Cruz Derecha"
 X = "X"
 Y = "Y"
 
@@ -134,7 +134,7 @@ DYNOS = "DYNOS"
 INFO_TITLE = "INFO"
 WARN_DISCORD = "Invita a amigos haciendo click derecho en su nombre en Discord y seleccionando\n'\\#d0d0ff\\Invitar a unirse\\#c8c8c8\\'.\n\nPuedes invitar en canales de un servidor también presionando el\nbotón \\#d0d0ff\\+\\#c8c8c8\\ al lado del cuadro de texto del chat.\n\nEl estado de Actividad Actual \\#ffa0a0\\debe estar\\#c8c8c8\\ activado en tus \najustes de Discord.\n\nEstár invisible \\#ffa0a0\\te prevendrá\\#c8c8c8\\ de crear invitaciones."
 WARN_DISCORD2 = "\\#ffa0a0\\Error:\\#c8c8c8\\ No se ha detectado a Discord.\n\n\\#a0a0a0\\Prueba a cerrar el juego,\nreiniciar Discord,\ny abrir el juego de nuevo."
-WARN_SOCKET = "Las conexiones directas \\#ffa0a0\\requieren\\#c8c8c8\\ que abras los puertos en tu rúter.\n\nAbre el puerto '\\#d0d0ff\\%d\\#c8c8c8\\' en UDP."
+WARN_SOCKET = "Las conexiones directas \\#ffa0a0\\requieren\\#c8c8c8\\ que abras los puertos en tu rúter.\n\nAbre el puerto '\\#d0d0ff\\%d\\#c8c8c8\\' con protocolo UDP."
 HOST = "Alojar"
 
 [HOST_MODS]
@@ -153,9 +153,9 @@ NONSOLID = "Intangible"
 SOLID = "Tangible"
 FRIENDLY_FIRE = "Fuego Amigo"
 PLAYER_INTERACTION = "Interacción entre jugadores"
-WEAK = "Débil"
+WEAK = "Poca"
 NORMAL = "Normal"
-TOO_MUCH = "Demasiado"
+TOO_MUCH = "Demasiada"
 KNOCKBACK_STRENGTH = "Fuerza de retroceso"
 LEAVE_LEVEL = "Salir del nivel"
 STAY_IN_LEVEL = "Seguir en el nivel"
@@ -174,7 +174,7 @@ DISCORD = "Discord"
 DIRECT_CONNECTION = "Conexión Directa"
 NETWORK_SYSTEM = "Modo de conexión"
 PORT = "Puerto"
-SAVE_SLOT = "Ranura Guardado"
+SAVE_SLOT = "Ranura de Guardado"
 SETTINGS = "Ajustes"
 MODS = "Mods"
 ROMHACKS = "Rom-Hacks"
