Updated lang files

--- a/lang/German.ini
+++ b/lang/German.ini
@@ -3,7 +3,7 @@ CONNECTED = "@ hat sich mit dem server verbunden"
 DISCONNECTED = "@ hat sich vom server getrennt"
 LEFT_THIS_LEVEL = "@ hat diesen level verlassen"
 ENTERED_THIS_LEVEL = "@ ist diesem level beigetreten"
-ENTERED = "@ ist beigetreten\n#"
+ENTERED = "@ ist beigetreten bei\n#"
 SERVER_CLOSED = "\\#ffa0a0\\Verbindung getrennt:\\#dcdcdc\\ Server wurde geschlossen"
 DISCORD_ERROR = "Discord warf einen fehler.\nUm dies zu vermeiden, versuche: \n1. das Spiel zu schließen.\n2. Discord neuzustarten.\n3. das Spiel wieder zu starten."
 DISCORD_DETECT = "\\#ffa0a0\\Fehlermeldung:\\#c8c8c8\\ Konnte Discord nicht finden.\n\\#a0a0a0\\Versuche das Spiel zu schließen, Discord neuzustarten, und dann das Spiel anschließlich wieder zu starten."
@@ -50,7 +50,7 @@ YES = "Ja"
 CAMERA = "KAMERA"
 FREE_CAMERA = "Freie Kamera"
 ANALOG_CAMERA = "Analog Kamera"
-MOUSE_LOOK = "Maus-Look"
+MOUSE_LOOK = "Maus-Sicht"
 INVERT_X = "X umkehren"
 INVERT_Y = "Y umkehren"
 X_SENSITIVITY = "X Empfindlichkeit"
@@ -61,7 +61,7 @@ DECELERATION = "Verzögerung"
 
 [CHEATS]
 CHEATS = "CHEATS"
-MOON_JUMP = "Moon-Jump"
+MOON_JUMP = "Mond-Sprung"
 GOD_MODE = "Gott Modus"
 INFINITE_LIVES = "Unbegrenzte Leben"
 SUPER_SPEED = "Supergeschwindigkeit"
@@ -83,14 +83,14 @@ RUMBLE_STRENGTH = "Rumble-Stärke"
 CHAT = "Chat"
 PLAYERS = "Spieler"
 D_UP = "D Hoch"
-D_DOWN = "D Unter"
+D_DOWN = "D Unten"
 D_LEFT = "D Links"
 D_RIGHT = "D Rechts"
 X = "X"
 Y = "Y"
 
 UP = "Hoch"
-DOWN = "Unter"
+DOWN = "Unten"
 LEFT = "Links"
 RIGHT = "Rechts"
 A = "A"
@@ -100,7 +100,7 @@ L = "L"
 R = "R"
 Z = "Z"
 C_UP = "C Hoch"
-C_DOWN = "C Unter"
+C_DOWN = "C Unten"
 C_LEFT = "C Links"
 C_RIGHT = "C Rechts"
 
@@ -220,7 +220,7 @@ DEBUG = "Debug"
 LANGUAGE = "Sprache"
 
 [MODLIST]
-MODS = "MODS"
+MODS = "MODIFIKATIONEN"
 
 [OPTIONS]
 OPTIONS = "OPTIONEN"
