--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -28,8 +28,8 @@ PLAYER_NOT_FOUND = "Não foi possivel achar este Jogador."
 SELF_KICK = "Você não pode se expulsar."
 SELF_BAN = "Você não pode se banir, inteligente."
 SELF_MOD = "Você não pode ganhar moderador de si mesmo."
-KICK_CONFIRM = "Você tem certeza que deseja Expulsar '@'?\nType '\\#a0ffa0\\/confirme\\#fff982\\' para expulsar."
-BAN_CONFIRM = "Você tem certeza que deseja Banir '@'?\nType '\\#a0ffa0\\/confirme\\#fff982\\' para banir."
+KICK_CONFIRM = "Você tem certeza que deseja Expulsar '@'?\nType '\\#a0ffa0\\/confirm\\#fff982\\' para expulsar."
+BAN_CONFIRM = "Você tem certeza que deseja Banir '@'?\nType '\\#a0ffa0\\/confirm\\#fff982\\' para banir."
 PERM_BAN_CONFIRM = "Você tem certeza que deseja banir ele Permanente '@'?\nType '\\#a0ffa0\\/confirm\\#fff982\\' to ban."
 MOD_CONFIRM = "Você tem certeza de que quer promover '@' a moderador?\nType '\\#a0ffa0\\/confirm\\#fff982\\'."
 PLAYERS_DESC = "/players - Lista de todos os Jogadores e seus IDs"
