--- a/lang/English.ini
+++ b/lang/English.ini
@@ -15,6 +15,10 @@ DISCONNECT_CLOSED = "\\#ffa0a0\\Disconnected:\\#c8c8c8\\ Host has closed the con
 DISCONNECT_BIG_MOD = "Server had too large of a mod.\nQuitting."
 DIED = "@ died"
 DEBUG_FLY = "@ entered the debug free fly state"
+IMPORT_MOD_SUCCESS = "\\#a0ffa0\\Imported mod\n\\#c8c8c8\\'@'"
+IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Imported DynOS pack\n\\#c8c8c8\\'@'"
+IMPORT_FAIL = "\\#ffa0a0\\Failed to import\n\\#c8c8c8\\'@'"
+IMPORT_FAIL_INGAME = "\\#ffa0a0\\Can not import while in-game"
 
 [CHAT]
 KICKING = "Kicking '@'!"
