--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -15,10 +15,10 @@ DISCONNECT_CLOSED = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ El anfitrión ha cerrad
 DISCONNECT_BIG_MOD = "El servidor tenía un mod demasiado pesado.\nSaliendo."
 DIED = "@ ha muerto"
 DEBUG_FLY = "@ está en estado de vuelo libre debug"
-IMPORT_MOD_SUCCESS = "\\#a0ffa0\\Imported mod\n\\#c8c8c8\\'@'"
-IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Imported DynOS pack\n\\#c8c8c8\\'@'"
-IMPORT_FAIL = "\\#ffa0a0\\Failed to import\n\\#c8c8c8\\'@'"
-IMPORT_FAIL_INGAME = "\\#ffa0a0\\Can not import while in-game"
+IMPORT_MOD_SUCCESS = "\\#a0ffa0\\Mod \n\\#c8c8c8\\'@'\n\\#a0ffa0\\Importado"
+IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\DynOS pack \n\\#c8c8c8\\'@'\n\\#a0ffa0\\Importado"
+IMPORT_FAIL = "\\#ffa0a0\\Fallo al importar \\#c8c8c8\\\n'@'"
+IMPORT_FAIL_INGAME = "\\#ffa0a0\\No se puede importar durante el juego"
 
 [CHAT]
 KICKING = "¡Expulsando a '@'!"
