--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -18,7 +18,7 @@ DEBUG_FLY = "@ está en estado de vuelo libre debug"
 IMPORT_MOD_SUCCESS = "\\#a0ffa0\\Mod \n\\#c8c8c8\\'@'\n\\#a0ffa0\\Importado"
 IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\DynOS pack \n\\#c8c8c8\\'@'\n\\#a0ffa0\\Importado"
 IMPORT_FAIL = "\\#ffa0a0\\Fallo al importar \\#c8c8c8\\\n'@'"
-IMPORT_FAIL_INGAME = "\\#ffa0a0\\No se puede importar durante el juego"
+IMPORT_FAIL_INGAME = "\\#ffa0a0\\No se puede importar mientras se está en juego"
 
 [CHAT]
 KICKING = "¡Expulsando a '@'!"
