--- a/lang/French.ini
+++ b/lang/French.ini
@@ -15,10 +15,10 @@ DISCONNECT_CLOSED = "\\#ffa0a0\\Déconnecté:\\#c8c8c8\\ L'hôte s'est déconnec
 DISCONNECT_BIG_MOD = "Le mod utilisé est trop volumineux.\nDéconnexion."
 DIED = "@ est mort"
 DEBUG_FLY = "@ a activé le mode vol (débug) "
-IMPORT_MOD_SUCCESS = "\\#a0ffa0\\Imported mod\n\\#c8c8c8\\'@'"
-IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Imported DynOS pack\n\\#c8c8c8\\'@'"
-IMPORT_FAIL = "\\#ffa0a0\\Failed to import\n\\#c8c8c8\\'@'"
-IMPORT_FAIL_INGAME = "\\#ffa0a0\\Can not import while in-game"
+IMPORT_MOD_SUCCESS = "\\#a0ffa0\\Le mod\n\\#c8c8c8\\'@'\\#a0ffa0\\\na été importé."
+IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Le pack DynOS\n\\#c8c8c8\\'@'\n\\#a0ffa0\\a été importé."
+IMPORT_FAIL = "\\#ffa0a0\\L'importation de\n\\#c8c8c8\\'@'\\#ffa0a0\\\na échoué."
+IMPORT_FAIL_INGAME = "\\#ffa0a0\\L'importation ne peut pas se faire pendant la partie."
 
 [CHAT]
 KICKING = "Vous avez expulsé '@' !"
