--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -15,10 +15,10 @@ DISCONNECT_CLOSED = "\\#ffa0a0\\Disconnected:\\#c8c8c8\\ O host fechou a conexã
 DISCONNECT_BIG_MOD = "o server tem um mod muito grande.\nQuitting."
 DIED = "@ morreu"
 DEBUG_FLY = "@ entrou no estado de debug para voar"
-IMPORT_MOD_SUCCESS = "\\#a0ffa0\\Imported mod\n\\#c8c8c8\\'@'"
-IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Imported DynOS pack\n\\#c8c8c8\\'@'"
-IMPORT_FAIL = "\\#ffa0a0\\Failed to import\n\\#c8c8c8\\'@'"
-IMPORT_FAIL_INGAME = "\\#ffa0a0\\Can not import while in-game"
+IMPORT_MOD_SUCCESS = "\\#c8c8c8\\'@'\n\\#a0ffa0\\Mod Importado"
+IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Pacote DynOS\n\\#c8c8c8\\'@'\\#a0ffa0\\\nImportado"
+IMPORT_FAIL = "\\#ffa0a0\\Falha em Importar\n\\#c8c8c8\\'@'"
+IMPORT_FAIL_INGAME = "\\#ffa0a0\\Falha no Importe durante o jogo"
 
 [CHAT]
 KICKING = "Expulso '@'!" 
