--- a/lang/German.ini
+++ b/lang/German.ini
@@ -15,10 +15,10 @@ DISCONNECT_CLOSED = "\\#ffa0a0\\Verbindung getrennt:\\#c8c8c8\\ Der Servereigent
 DISCONNECT_BIG_MOD = "Der Server besaß eine modifikation, die zu Groß war.\nDie Verbindung wird geschlossen."
 DIED = "@ starb"
 DEBUG_FLY = "@ trat in den Debug-Free-Fly-Zustand ein"
-IMPORT_MOD_SUCCESS = "\\#a0ffa0\\Imported mod\n\\#c8c8c8\\'@'"
-IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Imported DynOS pack\n\\#c8c8c8\\'@'"
-IMPORT_FAIL = "\\#ffa0a0\\Failed to import\n\\#c8c8c8\\'@'"
-IMPORT_FAIL_INGAME = "\\#ffa0a0\\Can not import while in-game"
+IMPORT_MOD_SUCCESS = "\\#a0ffa0\\Importierter Mod\n\\#c8c8c8\\'@'"
+IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Importiertes DynOS-Paket\n\\#c8c8c8\\'@'"
+IMPORT_FAIL = "\\#ffa0a0\\Fehler zum Importieren von\n\\#c8c8c8\\'@'"
+IMPORT_FAIL_INGAME = "\\#ffa0a0\\Kann im Spiel nicht importieren"
 
 [CHAT]
 KICKING = "'@' wird rausgeschmissen!"
