Started adding CoopNet

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -176,6 +176,7 @@ SERVER_TITLE = "SERVER"
 HOST_TITLE = "HOST"
 DISCORD = "Discord"
 DIRECT_CONNECTION = "Direct Connection"
+COOPNET = "CoopNet"
 NETWORK_SYSTEM = "Network system"
 PORT = "Port"
 SAVE_SLOT = "Save Slot"
