--- a/lang/French.ini
+++ b/lang/French.ini
@@ -176,6 +176,7 @@ SERVER_TITLE = "SERVEUR"
 HOST_TITLE = "HÉBERGER"
 DISCORD = "Discord"
 DIRECT_CONNECTION = "Connexion Directe"
+COOPNET = "CoopNet"
 NETWORK_SYSTEM = "Mode d'hébergement"
 PORT = "Port"
 SAVE_SLOT = "Sauvegarde"
