--- a/lang/German.ini
+++ b/lang/German.ini
@@ -176,6 +176,7 @@ SERVER_TITLE = "SERVER"
 HOST_TITLE = "VERANSTALTEN"
 DISCORD = "Discord"
 DIRECT_CONNECTION = "Direkte Verbindung"
+COOPNET = "CoopNet"
 NETWORK_SYSTEM = "Netzwerk-System"
 PORT = "Port"
 SAVE_SLOT = "Save Slot"
