--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -175,6 +175,7 @@ AMOUNT_OF_PLAYERS = "Número de jugadores"
 SERVER_TITLE = "SERVIDOR"
 HOST_TITLE = "ALOJAR"
 DISCORD = "Discord"
+COOPNET = "CoopNet"
 DIRECT_CONNECTION = "Conexión Directa"
 NETWORK_SYSTEM = "Modo de conexión"
 PORT = "Puerto"
