--- a/lang/English.ini
+++ b/lang/English.ini
@@ -19,6 +19,8 @@ IMPORT_MOD_SUCCESS = "\\#a0ffa0\\Imported mod\n\\#c8c8c8\\'@'"
 IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Imported DynOS pack\n\\#c8c8c8\\'@'"
 IMPORT_FAIL = "\\#ffa0a0\\Failed to import\n\\#c8c8c8\\'@'"
 IMPORT_FAIL_INGAME = "\\#ffa0a0\\Can not import while in-game"
+COOPNET_CONNECTION_FAILED = "\\#ffa0a0\\Could not connect to CoopNet!"
+COOPNET_DISCONNECTED = "\\#ffa0a0\\Lost connection to CoopNet!"
 
 [CHAT]
 KICKING = "Kicking '@'!"
