Added menus for public and private lobbies

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -196,6 +196,9 @@ JOIN_TITLE = "JOIN"
 JOIN_DISCORD = "To join a \\#d0d0ff\\Discord\\#c8c8c8\\ lobby:\n\nKeep the game open and click the join button on the invite.\n\nIf the invite says that the game has ended, click the name of the person that sent the invite to refresh it."
 JOIN_SOCKET = "Enter \\#d0d0ff\\direct connection\\#c8c8c8\\ IP and port:"
 JOIN = "Join"
+PUBLIC_LOBBIES = "Public Lobbies"
+PRIVATE_LOBBIES = "Private Lobbies"
+DIRECT = "Direct Connection"
 
 [MAIN]
 QUIT_TITLE = "QUIT"
@@ -323,3 +326,10 @@ ENV_VOLUME = "Env Volume"
 
 [LANGUAGE]
 LANGUAGE = "LANGUAGE"
+
+[LOBBIES]
+PUBLIC_LOBBIES = "PUBLIC LOBBIES"
+PRIVATE_LOBBIES = "PRIVATE LOBBIES"
+REFRESH = "Refresh"
+ENTER_PASSWORD = "Enter the private lobby's password:"
+SEARCH = "Search"
