Add lobby refresh button

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -331,5 +331,6 @@ LANGUAGE = "LANGUAGE"
 PUBLIC_LOBBIES = "PUBLIC LOBBIES"
 PRIVATE_LOBBIES = "PRIVATE LOBBIES"
 REFRESH = "Refresh"
+REFRESHING = "Refreshing..."
 ENTER_PASSWORD = "Enter the private lobby's password:"
 SEARCH = "Search"
