Added messages to lobby list when no lobbies found, or coopnet connection fails

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -334,3 +334,4 @@ REFRESH = "Refresh"
 REFRESHING = "Refreshing..."
 ENTER_PASSWORD = "Enter the private lobby's password:"
 SEARCH = "Search"
+NONE_FOUND = "No lobbies were found."
