Added ability to set lobby password

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -181,6 +181,7 @@ DIRECT_CONNECTION = "Direct Connection"
 COOPNET = "CoopNet"
 NETWORK_SYSTEM = "Network system"
 PORT = "Port"
+PASSWORD = "Password"
 SAVE_SLOT = "Save Slot"
 SETTINGS = "Settings"
 MODS = "Mods"
