Added error handling for coopnet

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -21,6 +21,10 @@ IMPORT_FAIL = "\\#ffa0a0\\Failed to import\n\\#c8c8c8\\'@'"
 IMPORT_FAIL_INGAME = "\\#ffa0a0\\Can not import while in-game"
 COOPNET_CONNECTION_FAILED = "\\#ffa0a0\\Could not connect to CoopNet!"
 COOPNET_DISCONNECTED = "\\#ffa0a0\\Lost connection to CoopNet!"
+LOBBY_NOT_FOUND = "\\#ffa0a0\\The lobby no longer exists!"
+LOBBY_JOIN_FULL = "\\#ffa0a0\\The lobby is full!"
+LOBBY_JOIN_FAILED = "\\#ffa0a0\\Failed to join the lobby!"
+LOBBY_PASSWORD_INCORRECT = "\\#ffa0a0\\Entered the wrong lobby password!"
 
 [CHAT]
 KICKING = "Kicking '@'!"
