--- a/lang/English.ini
+++ b/lang/English.ini
@@ -111,6 +111,7 @@ C_RIGHT = "C Right"
 [DISPLAY]
 DISPLAY = "DISPLAY"
 FULLSCREEN = "Fullscreen"
+FORCE_4BY3 = "Force 4:3"
 PRELOAD_TEXTURES = "Preload Textures"
 VSYNC = "VSync"
 UNCAPPED_FRAMERATE = "Uncapped Framerate"
