--- a/lang/French.ini
+++ b/lang/French.ini
@@ -111,6 +111,7 @@ C_RIGHT = "C Droite"
 [DISPLAY]
 DISPLAY = "AFFICHAGE"
 FULLSCREEN = "Plein Écran"
+FORCE_4BY3 = "Force 4:3"
 PRELOAD_TEXTURES = "Textures Préchargées"
 VSYNC = "VSync"
 UNCAPPED_FRAMERATE = "FPS Illimités"
