--- a/lang/German.ini
+++ b/lang/German.ini
@@ -111,6 +111,7 @@ C_RIGHT = "C Rechts"
 [DISPLAY]
 DISPLAY = "DISPLAY"
 FULLSCREEN = "Vollbildmodus"
+FORCE_4BY3 = "Gewalt 4:3"
 PRELOAD_TEXTURES = "Texturen vorladen"
 VSYNC = "VSync"
 UNCAPPED_FRAMERATE = "Unbegrenzte Framerate"
