--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -111,6 +111,7 @@ C_RIGHT = "C RIGHT"
 [DISPLAY]
 DISPLAY = "VÍDEO"
 FULLSCREEN = "Tela Cheia"
+FORCE_4BY3 = "Força 4:3"
 PRELOAD_TEXTURES = "Texturas Precarregadas"
 VSYNC = "VSync"
 UNCAPPED_FRAMERATE = "Taxa de Quadros Limitado"
