--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -111,6 +111,7 @@ C_RIGHT = "C Derecha"
 [DISPLAY]
 DISPLAY = "PANTALLA"
 FULLSCREEN = "Pantalla completa"
+FORCE_4BY3 = "Fuerza 4:3"
 PRELOAD_TEXTURES = "Precargar texturas"
 VSYNC = "Sincronización vertical"
 UNCAPPED_FRAMERATE = "FPS sin límite"
