--- a/lang/English.ini
+++ b/lang/English.ini
@@ -25,6 +25,7 @@ LOBBY_NOT_FOUND = "\\#ffa0a0\\The lobby no longer exists!"
 LOBBY_JOIN_FULL = "\\#ffa0a0\\The lobby is full!"
 LOBBY_JOIN_FAILED = "\\#ffa0a0\\Failed to join the lobby!"
 LOBBY_PASSWORD_INCORRECT = "\\#ffa0a0\\Entered the wrong lobby password!"
+COOPNET_VERSION = "\\#ffa0a0\\Your version is no longer compatible with CoopNet. Update the game!"
 
 [CHAT]
 KICKING = "Kicking '@'!"
