Add peering failure notification

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -26,6 +26,7 @@ LOBBY_JOIN_FULL = "\\#ffa0a0\\The lobby is full!"
 LOBBY_JOIN_FAILED = "\\#ffa0a0\\Failed to join the lobby!"
 LOBBY_PASSWORD_INCORRECT = "\\#ffa0a0\\Entered the wrong lobby password!"
 COOPNET_VERSION = "\\#ffa0a0\\Your version is no longer compatible with CoopNet. Update the game!"
+PEER_FAILED = "\\#ffa0a0\\Failed to connect to player '@'"
 
 [CHAT]
 KICKING = "Kicking '@'!"
