Improve peer failure notification

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -27,6 +27,8 @@ LOBBY_JOIN_FAILED = "\\#ffa0a0\\Failed to join the lobby!"
 LOBBY_PASSWORD_INCORRECT = "\\#ffa0a0\\Entered the wrong lobby password!"
 COOPNET_VERSION = "\\#ffa0a0\\Your version is no longer compatible with CoopNet. Update the game!"
 PEER_FAILED = "\\#ffa0a0\\Failed to connect to player '@'"
+UNKNOWN = "unknown"
+LOBBY_HOST = "the lobby's host"
 
 [CHAT]
 KICKING = "Kicking '@'!"
