Updated French Translation (#349)
* Updated French Translation for CoopNet

--- a/lang/French.ini
+++ b/lang/French.ini
@@ -19,6 +19,16 @@ IMPORT_MOD_SUCCESS = "\\#a0ffa0\\Le mod\n\\#c8c8c8\\'@'\\#a0ffa0\\\na été impo
 IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Le pack DynOS\n\\#c8c8c8\\'@'\n\\#a0ffa0\\a été importé."
 IMPORT_FAIL = "\\#ffa0a0\\L'importation de\n\\#c8c8c8\\'@'\\#ffa0a0\\\na échoué."
 IMPORT_FAIL_INGAME = "\\#ffa0a0\\L'importation ne peut pas se faire pendant la partie."
+COOPNET_CONNECTION_FAILED = "\\#ffa0a0\\La connexion à CoopNet a échouée!"
+COOPNET_DISCONNECTED = "\\#ffa0a0\\Connexion à CoopNet perdue!"
+LOBBY_NOT_FOUND = "\\#ffa0a0\\Cette partie n'existe pas!"
+LOBBY_JOIN_FULL = "\\#ffa0a0\\Cette partie est complète!"
+LOBBY_JOIN_FAILED = "\\#ffa0a0\\La connexion à la partie a échouée!"
+LOBBY_PASSWORD_INCORRECT = "\\#ffa0a0\\Mot de passe incorrect!"
+COOPNET_VERSION = "\\#ffa0a0\\Votre version n'est plus compatible avec CoopNet. Mettez à jour votre jeu!"
+PEER_FAILED = "\\#ffa0a0\\La connexion au joueur '@' a échouée"
+UNKNOWN = "inconnu"
+LOBBY_HOST = "l'hôte de la partie"
 
 [CHAT]
 KICKING = "Vous avez expulsé '@' !"
@@ -180,6 +190,7 @@ DIRECT_CONNECTION = "Connexion Directe"
 COOPNET = "CoopNet"
 NETWORK_SYSTEM = "Mode d'hébergement"
 PORT = "Port"
+PASSWORD = "Mot de Passe"
 SAVE_SLOT = "Sauvegarde"
 SETTINGS = "Paramètres"
 MODS = "Mods"
@@ -195,6 +206,9 @@ JOIN_TITLE = "REJOINDRE"
 JOIN_DISCORD = "Pour rejoindre une partie \\#d0d0ff\\Discord\\#c8c8c8\\:\n\nLaissez le jeu ouvert et cliquez sur rejoindre sur l'invitation.\n\nSi l'invitation dit que la partie est terminée, cliquez sur le nom de la personne qui a envoyé l'invitation pour l'actualiser."
 JOIN_SOCKET = "Entrez l'IP et le port de la\n\\#d0d0ff\\connexion directe\\#c8c8c8\\ :"
 JOIN = "Rejoindre"
+PUBLIC_LOBBIES = "Parties Publiques"
+PRIVATE_LOBBIES = "Parties Privées"
+DIRECT = "Connexion Directe"
 
 [MAIN]
 QUIT_TITLE = "QUITTER"
@@ -322,3 +336,13 @@ ENV_VOLUME = "Volume de l'environnement"
 
 [LANGUAGE]
 LANGUAGE = "LANGUE"
+
+[LOBBIES]
+PUBLIC_LOBBIES = "PARTIES\nPUBLIQUES"
+PRIVATE_LOBBIES = "PARTIES PRIVÉES"
+REFRESH = "Actualiser"
+REFRESHING = "Actualisation..."
+ENTER_PASSWORD = "Entrez le mot de passe de la partie:"
+SEARCH = "Rechercher"
+NONE_FOUND = "Aucune partie n'a été trouvée."
+
