Update German (thanks longjump guy)

--- a/lang/German.ini
+++ b/lang/German.ini
@@ -19,6 +19,16 @@ IMPORT_MOD_SUCCESS = "\\#a0ffa0\\Importierter Mod\n\\#c8c8c8\\'@'"
 IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Importiertes DynOS-Paket\n\\#c8c8c8\\'@'"
 IMPORT_FAIL = "\\#ffa0a0\\Fehler zum Importieren von\n\\#c8c8c8\\'@'"
 IMPORT_FAIL_INGAME = "\\#ffa0a0\\Kann im Spiel nicht importieren"
+COOPNET_CONNECTION_FAILED = "\\#ffa0a0\\Verbindung zu CoopNet gescheitert!"
+COOPNET_DISCONNECTED = "\\#ffa0a0\\Verbindung zu CoopNet verloren!"
+LOBBY_NOT_FOUND = "\\#ffa0a0\\Diese Lobby existiert nicht mehr!"
+LOBBY_JOIN_FULL = "\\#ffa0a0\\Diese Lobby ist vollzählig!"
+LOBBY_JOIN_FAILED = "\\#ffa0a0\\Konnte nicht zum Lobby beitreten!"
+LOBBY_PASSWORD_INCORRECT = "\\#ffa0a0\\Falsches Lobby Passwort!"
+COOPNET_VERSION = "\\#ffa0a0\\Deine version ist nicht mehr Kompatibel mit CoopNet. Lade die neuste Version des Spiels herunter!"
+PEER_FAILED = "\\#ffa0a0\\Konnte nicht mit dem Spieler '@' verbinden"
+UNKNOWN = "Unbekannt"
+LOBBY_HOST = "Lobby veranstalter"
 
 [CHAT]
 KICKING = "'@' wird rausgeschmissen!"
@@ -180,6 +190,7 @@ DIRECT_CONNECTION = "Direkte Verbindung"
 COOPNET = "CoopNet"
 NETWORK_SYSTEM = "Netzwerk-System"
 PORT = "Port"
+PASSWORD = "Passwort"
 SAVE_SLOT = "Save Slot"
 SETTINGS = "Einstellungen"
 MODS = "Mods"
@@ -195,6 +206,9 @@ JOIN_TITLE = "BEITRETEN"
 JOIN_DISCORD = "Um einen \\#d0d0ff\\Discord\\#c8c8c8\\ lobby beizutreten:\n\nLassen Sie das Spiel geöffnet und klicken Sie in der Einladung auf die Schaltfläche "Beitreten".\n\nWenn die Einladung sagt, dass das Spiel beendet ist, klicken Sie auf den Namen der Person, die die Einladung gesendet hat, um sie zu aktualisieren."
 JOIN_SOCKET = "Gib für die \\#d0d0ff\\Direkte Verbindung\\#c8c8c8\\ IP und port an:"
 JOIN = "Beitreten"
+PUBLIC_LOBBIES = "Öffentliche Lobbys"
+PRIVATE_LOBBIES = "Private Lobbys"
+DIRECT = "Direkte Verbindung"
 
 [MAIN]
 QUIT_TITLE = "VERLASSEN"
@@ -322,3 +336,12 @@ ENV_VOLUME = "Env Lautstärke"
 
 [LANGUAGE]
 LANGUAGE = "SPRACHE"
+
+[LOBBIES]
+PUBLIC_LOBBIES = "ÖFFENTLICHE LOBBIES"
+PRIVATE_LOBBIES = "PRIVATE LOBBIES"
+REFRESH = "Aktualisieren"
+REFRESHING = "Wird Aktualisiert..."
+ENTER_PASSWORD = "Gib das Passwort für das Lobby ein:"
+SEARCH = "Suchen"
+NONE_FOUND = "Es wurden keine Lobbys gefunden."
