Update Portuguese (thanks murlio)

--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -19,6 +19,16 @@ IMPORT_MOD_SUCCESS = "\\#c8c8c8\\'@'\n\\#a0ffa0\\Mod Importado"
 IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Pacote DynOS\n\\#c8c8c8\\'@'\\#a0ffa0\\\nImportado"
 IMPORT_FAIL = "\\#ffa0a0\\Falha em Importar\n\\#c8c8c8\\'@'"
 IMPORT_FAIL_INGAME = "\\#ffa0a0\\Falha no Importe durante o jogo"
+COOPNET_CONNECTION_FAILED = "\\#ffa0a0\\Não foi possível se conectar ao CoopNet!"
+COOPNET_DISCONNECTED = "\\#ffa0a0\\A conexão ao CoopNet foi perdida!"
+LOBBY_NOT_FOUND = "\\#ffa0a0\\Essa partida não está mais ativa!"
+LOBBY_JOIN_FULL = "\\#ffa0a0\\A partida está cheia!"
+LOBBY_JOIN_FAILED = "\\#ffa0a0\\Falha ao entrar na partida!"
+LOBBY_PASSWORD_INCORRECT = "\\#ffa0a0\\Senha incorreta!"
+COOPNET_VERSION = "\\#ffa0a0\\A sua versão não é mais compatível com o CoopNet. Atualize o jogo!"
+PEER_FAILED = "\\#ffa0a0\\Falha ao conectar no jogo de '@'"
+UNKNOWN = "desconhecido"
+LOBBY_HOST = "o host da partida"
 
 [CHAT]
 KICKING = "Expulso '@'!" 
@@ -180,6 +190,7 @@ COOPNET = "CoopNet"
 DIRECT_CONNECTION = "Conexão Direta"
 NETWORK_SYSTEM = "Sistema de Rede"
 PORT = "Porta"
+PASSWORD = "Senha"
 SAVE_SLOT = "Slot de Salvamento"
 SETTINGS = "Configurações"
 MODS = "Mods"
@@ -195,6 +206,9 @@ JOIN_TITLE = "ENTRAR"
 JOIN_DISCORD = "Para entrar em um lobby do \\#d0d0ff\\Discord\\#c8c8c8\\:\n\nMantenha o jogo aberto e clique no botão entrar no convite.\n\nSe o convite disser que o jogo acabou, clique no nome da pessoa que enviou o convite para recarregá-lo."
 JOIN_SOCKET = "Enter \\#d0d0ff\\direct connection\\#c8c8c8\\ IP and port:"
 JOIN = "Entrar"
+PUBLIC_LOBBIES = "Partidas Públicas"
+PRIVATE_LOBBIES = "Partidas Privadas"
+DIRECT = "Conexão Direta"
 
 [MAIN]
 QUIT_TITLE = "SAIR"
@@ -322,3 +336,12 @@ ENV_VOLUME = "Volume Ambiente"
 
 [LANGUAGE]
 LANGUAGE = "IDIOMA"
+
+[LOBBIES]
+PUBLIC_LOBBIES = "PARTIDAS PUBLICAS"
+PRIVATE_LOBBIES = "PARTIDAS PRIVADAS"
+REFRESH = "Recarregar"
+REFRESHING = "Recarregando..."
+ENTER_PASSWORD = "Coloque a senha para a partida privada:"
+SEARCH = "Pesquisar"
+NONE_FOUND = "Nenhuma partida encontrada."
