Updated spanish lang file (thanks SonicDark)

--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -19,6 +19,16 @@ IMPORT_MOD_SUCCESS = "El mod \\#c8c8c8\\'@'\\#a0ffa0\\\nha sido importado con é
 IMPORT_DYNOS_SUCCESS = "El pack de DynOS \\#c8c8c8\\'@'\\#a0ffa0\\\nha sido importado con éxito."
 IMPORT_FAIL = "\n\\#ffa0a0\\Error al importar archivo. \\#c8c8c8\\\n'@'"
 IMPORT_FAIL_INGAME = "\\#ffa0a0\\No se pueden importar archivos\nen medio de una partida."
+COOPNET_CONNECTION_FAILED = "\\#ffa0a0\\¡No se pudo conectar a CoopNet!"
+COOPNET_DISCONNECTED = "\\#ffa0a0\\¡Se perdió la conexión a CoopNet!"
+LOBBY_NOT_FOUND = "\\#ffa0a0\\¡La partida ya no existe!"
+LOBBY_JOIN_FULL = "\\#ffa0a0\\¡La partida está llena!"
+LOBBY_JOIN_FAILED = "\\#ffa0a0\\¡Error al unirse a la partida!"
+LOBBY_PASSWORD_INCORRECT = "\\#ffa0a0\\¡Contraseña de partida incorrecta!"
+COOPNET_VERSION = "\\#ffa0a0\\Tu versión ya no es compatible con CoopNet. ¡Actualiza el juego!"
+PEER_FAILED = "\\#ffa0a0\\Error al conectarse al jugador '@'"
+UNKNOWN = "desconocido"
+LOBBY_HOST = "la partida del anfitrión"
 
 [CHAT]
 KICKING = "¡'@' ha sido expulsado!"
@@ -180,6 +190,7 @@ COOPNET = "CoopNet"
 DIRECT_CONNECTION = "Conexión Directa"
 NETWORK_SYSTEM = "Modo de conexión"
 PORT = "Puerto"
+PASSWORD = "Contraseña"
 SAVE_SLOT = "Ranuras"
 SETTINGS = "Ajustes"
 MODS = "Mods"
@@ -195,6 +206,9 @@ JOIN_TITLE = "UNIRSE"
 JOIN_DISCORD = "Para unirte a un lobby en \\#d0d0ff\\Discord\\#c8c8c8\\:\n\nMantén el juego abierto y acepta la invitación.\n\nSi la invitación dice que la partida ha terminado, haz click en el nombre de la persona que te invitó para\nrefrescarla."
 JOIN_SOCKET = "Introduce la IP y el puerto de la \\#d0d0ff\\conexión directa\\#c8c8c8\\:"
 JOIN = "Unirse"
+PUBLIC_LOBBIES = "Salas Públicas"
+PRIVATE_LOBBIES = "Salas Privadas"
+DIRECT = "Conexión Directa"
 
 [MAIN]
 QUIT_TITLE = "SALIR"
@@ -322,3 +336,12 @@ ENV_VOLUME = "Volumen de Entorno"
 
 [LANGUAGE]
 LANGUAGE = "IDIOMA"
+
+[LOBBIES]
+PUBLIC_LOBBIES = "PARTIDAS PÚBLICAS"
+PRIVATE_LOBBIES = "PARTIDAS PRIVADAS"
+REFRESH = "Refrescar"
+REFRESHING = "Refrescando..."
+ENTER_PASSWORD = "Introduce la contraseña de la partida privada:"
+SEARCH = "Buscar"
+NONE_FOUND = "No se encontraron partidas."
