Update lang files

--- a/lang/French.ini
+++ b/lang/French.ini
@@ -121,7 +121,7 @@ C_RIGHT = "C Droite"
 [DISPLAY]
 DISPLAY = "AFFICHAGE"
 FULLSCREEN = "Plein Écran"
-FORCE_4BY3 = "Force 4:3"
+FORCE_4BY3 = "Forcer l'affichage 4:3"
 PRELOAD_TEXTURES = "Textures Préchargées"
 VSYNC = "VSync"
 UNCAPPED_FRAMERATE = "FPS Illimités"
