--- a/lang/German.ini
+++ b/lang/German.ini
@@ -338,7 +338,7 @@ ENV_VOLUME = "Env Lautstärke"
 LANGUAGE = "SPRACHE"
 
 [LOBBIES]
-PUBLIC_LOBBIES = "ÖFFENTLICHE LOBBIES"
+PUBLIC_LOBBIES = "ÖFFENTLICHE\nLOBBIES"
 PRIVATE_LOBBIES = "PRIVATE LOBBIES"
 REFRESH = "Aktualisieren"
 REFRESHING = "Wird Aktualisiert..."
