--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -338,8 +338,8 @@ ENV_VOLUME = "Volumen de Entorno"
 LANGUAGE = "IDIOMA"
 
 [LOBBIES]
-PUBLIC_LOBBIES = "PARTIDAS PÚBLICAS"
-PRIVATE_LOBBIES = "PARTIDAS PRIVADAS"
+PUBLIC_LOBBIES = "PARTIDAS\nPÚBLICAS"
+PRIVATE_LOBBIES = "PARTIDAS\nPRIVADAS"
 REFRESH = "Refrescar"
 REFRESHING = "Refrescando..."
 ENTER_PASSWORD = "Introduce la contraseña de la partida privada:"
