--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -338,8 +338,8 @@ ENV_VOLUME = "Volume Ambiente"
 LANGUAGE = "IDIOMA"
 
 [LOBBIES]
-PUBLIC_LOBBIES = "PARTIDAS PUBLICAS"
-PRIVATE_LOBBIES = "PARTIDAS PRIVADAS"
+PUBLIC_LOBBIES = "PARTIDAS\nPUBLICAS"
+PRIVATE_LOBBIES = "PARTIDAS\nPRIVADAS"
 REFRESH = "Recarregar"
 REFRESHING = "Recarregando..."
 ENTER_PASSWORD = "Coloque a senha para a partida privada:"
