Added temp english strings into Italian

--- a/lang/Italian.ini
+++ b/lang/Italian.ini
@@ -19,6 +19,16 @@ IMPORT_MOD_SUCCESS = "\\#a0ffa0\\importata la mod\n\\#c8c8c8\\'@'"
 IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Importato il pacchetto DynOS\n\\#c8c8c8\\'@'"
 IMPORT_FAIL = "\\#ffa0a0\\Impossibile importare\n\\#c8c8c8\\'@'"
 IMPORT_FAIL_INGAME = "\\#ffa0a0\\Impossibile importare durante la partita"
+COOPNET_CONNECTION_FAILED = "\\#ffa0a0\\Could not connect to CoopNet!"
+COOPNET_DISCONNECTED = "\\#ffa0a0\\Lost connection to CoopNet!"
+LOBBY_NOT_FOUND = "\\#ffa0a0\\The lobby no longer exists!"
+LOBBY_JOIN_FULL = "\\#ffa0a0\\The lobby is full!"
+LOBBY_JOIN_FAILED = "\\#ffa0a0\\Failed to join the lobby!"
+LOBBY_PASSWORD_INCORRECT = "\\#ffa0a0\\Entered the wrong lobby password!"
+COOPNET_VERSION = "\\#ffa0a0\\Your version is no longer compatible with CoopNet. Update the game!"
+PEER_FAILED = "\\#ffa0a0\\Failed to connect to player '@'"
+UNKNOWN = "unknown"
+LOBBY_HOST = "the lobby's host"
 
 [CHAT]
 KICKING = "Espulso '@'!"
@@ -109,6 +119,7 @@ C_RIGHT = "C Destra"
 [DISPLAY]
 DISPLAY = "GRAFICA"
 FULLSCREEN = "Schermo intero"
+FORCE_4BY3 = "Force 4:3"
 PRELOAD_TEXTURES = "Precarica Textures"
 VSYNC = "VSync"
 UNCAPPED_FRAMERATE = "Fotogrammi Illimitati"
@@ -176,6 +187,7 @@ DISCORD = "Discord"
 DIRECT_CONNECTION = "Connessione diretta"
 NETWORK_SYSTEM = "Sistema di connessione"
 PORT = "Porta"
+PASSWORD = "Password"
 SAVE_SLOT = "Slot di Salvataggio"
 SETTINGS = "Opzioni"
 MODS = "Mods"
@@ -191,6 +203,9 @@ JOIN_TITLE = "UNISCITI"
 JOIN_DISCORD = "Per entrare in una partita da \\#d0d0ff\\Discord\\#c8c8c8\\:\n\nMantieni il gioco aperto e clicca sul pulsante Unisciti.\n\nSe l'invito dice che la partita è finita,/nclicca sul nome della persona che l'ha mandato per ripristinarla."
 JOIN_SOCKET = "Immetti un \\#d0d0ff\\IP e una Porta\\#c8c8c8\\ per la connessione diretta:"
 JOIN = "Unisciti"
+PUBLIC_LOBBIES = "Public Lobbies"
+PRIVATE_LOBBIES = "Private Lobbies"
+DIRECT = "Direct Connection"
 
 [MAIN]
 QUIT_TITLE = "ABBANDONA"
@@ -318,3 +333,12 @@ ENV_VOLUME = "Ambiente"
 
 [LANGUAGE]
 LANGUAGE = "LINGUA"
+
+[LOBBIES]
+PUBLIC_LOBBIES = "PUBLIC LOBBIES"
+PRIVATE_LOBBIES = "PRIVATE LOBBIES"
+REFRESH = "Refresh"
+REFRESHING = "Refreshing..."
+ENTER_PASSWORD = "Enter the private lobby's password:"
+SEARCH = "Search"
+NONE_FOUND = "No lobbies were found."
