Added MSAA to OpenGL (SDL2)
Fixed text rendering bug where UVs were rounded incorrectly

--- a/lang/French.ini
+++ b/lang/French.ini
@@ -141,6 +141,10 @@ D10X = "x10"
 D100X = "x100"
 DRAW_DISTANCE = "Distance d'affichage"
 DYNOS_PACKS = "Packs DynOS"
+ANTIALIASING = "Anti-aliasing"
+OFF = "Off"
+MUST_RESTART = "You must restart the game for some changes to take effect."
+
 
 [DYNOS]
 DYNOS = "DYNOS"
