--- a/lang/Italian.ini
+++ b/lang/Italian.ini
@@ -139,6 +139,9 @@ D10X = "10x"
 D100X = "100x"
 DRAW_DISTANCE = "Distanza di simulazione"
 DYNOS_PACKS = "Pacchetti DynOS"
+ANTIALIASING = "Anti-aliasing"
+OFF = "Off"
+MUST_RESTART = "You must restart the game for some changes to take effect."
 
 [DYNOS]
 DYNOS = "DYNOS"
