--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -141,6 +141,9 @@ D10X = "10x"
 D100X = "100x"
 DRAW_DISTANCE = "Draw Distance"
 DYNOS_PACKS = "DynOS Packs"
+ANTIALIASING = "Anti-aliasing"
+OFF = "Off"
+MUST_RESTART = "You must restart the game for some changes to take effect."
 
 [DYNOS]
 DYNOS = "DYNOS"
