--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -141,6 +141,9 @@ D10X = "10x"
 D100X = "100x"
 DRAW_DISTANCE = "Distancia de dibujado"
 DYNOS_PACKS = "Packs de DynOS"
+ANTIALIASING = "Anti-aliasing"
+OFF = "Off"
+MUST_RESTART = "You must restart the game for some changes to take effect."
 
 [DYNOS]
 DYNOS = "DYNOS"
