--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -142,8 +142,8 @@ D100X = "100x"
 DRAW_DISTANCE = "Draw Distance"
 DYNOS_PACKS = "DynOS Packs"
 ANTIALIASING = "Anti-aliasing"
-OFF = "Off"
-MUST_RESTART = "You must restart the game for some changes to take effect."
+OFF = "Desligado"
+MUST_RESTART = "Você precisará reiniciar o jogo para algumas alterações serem aplicadas."
 
 [DYNOS]
 DYNOS = "DYNOS"
