--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -142,8 +142,8 @@ D100X = "100x"
 DRAW_DISTANCE = "Distancia de dibujado"
 DYNOS_PACKS = "Packs de DynOS"
 ANTIALIASING = "Anti-aliasing"
-OFF = "Off"
-MUST_RESTART = "You must restart the game for some changes to take effect."
+OFF = "Desactivado"
+MUST_RESTART = "Tienes que reiniciar el juego para que algunos cambios surtan efecto."
 
 [DYNOS]
 DYNOS = "DYNOS"
