Updated lang files (thanks Skeltan and longjump guy

--- a/lang/French.ini
+++ b/lang/French.ini
@@ -142,9 +142,8 @@ D100X = "x100"
 DRAW_DISTANCE = "Distance d'affichage"
 DYNOS_PACKS = "Packs DynOS"
 ANTIALIASING = "Anti-aliasing"
-OFF = "Off"
-MUST_RESTART = "You must restart the game for some changes to take effect."
-
+OFF = "Désactivé"
+MUST_RESTART = "Vous devez relancer le jeu pour que quelques changements prennent effet."
 
 [DYNOS]
 DYNOS = "DYNOS"
