--- a/lang/German.ini
+++ b/lang/German.ini
@@ -142,8 +142,8 @@ D100X = "100x"
 DRAW_DISTANCE = "Sichtweite"
 DYNOS_PACKS = "DynOS Packs"
 ANTIALIASING = "Anti-aliasing"
-OFF = "Off"
-MUST_RESTART = "You must restart the game for some changes to take effect."
+OFF = "Aus"
+MUST_RESTART = "Du musst das Spiel neu starten, damit einige Änderungen wirksam werden."
 
 [DYNOS]
 DYNOS = "DYNOS"
