Added russian (thanks Fox), updated french (thanks wRadion)

--- a/lang/French.ini
+++ b/lang/French.ini
@@ -143,7 +143,7 @@ DRAW_DISTANCE = "Distance d'affichage"
 DYNOS_PACKS = "Packs DynOS"
 ANTIALIASING = "Anti-aliasing"
 OFF = "Désactivé"
-MUST_RESTART = "Vous devez relancer le jeu pour que quelques changements prennent effet."
+MUST_RESTART = "Vous devez relancer le jeu pour que certains changements prennent effet."
 
 [DYNOS]
 DYNOS = "DYNOS"
