Added profiling to more places to make lag easier to track down

--- a/lang/Dutch.ini
+++ b/lang/Dutch.ini
@@ -231,6 +231,7 @@ PLAY_VANILLA_DEMOS = "Speel normale demos af"
 DEBUG_TITLE = "DEBUG"
 FIXED_COLLISIONS = "vaste botsingen"
 LUA_PROFILER = "Lua Profiler"
+CTX_PROFILER = "Ctx Profiler"
 DEBUG_PRINT = "Debug Print"
 DEBUG_INFO = "Debug Informatie"
 DEBUG_ERRORS = "Debug Errors"
