--- a/lang/Italian.ini
+++ b/lang/Italian.ini
@@ -229,6 +229,7 @@ PLAY_VANILLA_DEMOS = "Riproduci le demo di gioco"
 DEBUG_TITLE = "DEBUG"
 FIXED_COLLISIONS = "Collisioni Aggiustate"
 LUA_PROFILER = "Profiler Lua"
+CTX_PROFILER = "Profiler Ctx"
 DEBUG_PRINT = "Stampa di debug"
 DEBUG_INFO = "Info di debug"
 DEBUG_ERRORS = "Errori di debug"
