--- a/lang/Russian.ini
+++ b/lang/Russian.ini
@@ -231,6 +231,7 @@ PLAY_VANILLA_DEMOS = "Воспроизведение демоверсий"
 DEBUG_TITLE = "DEBUG"
 FIXED_COLLISIONS = "Фиксированные столкновения"
 LUA_PROFILER = "Профайлер Lua"
+CTX_PROFILER = "Профайлер Ctx"
 DEBUG_PRINT = "Отладочная печать"
 DEBUG_INFO = "Отладочная информация"
 DEBUG_ERRORS = "Ошибки отладки"
