--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -232,6 +232,7 @@ PLAY_VANILLA_DEMOS = "Demos originales"
 DEBUG_TITLE = "DEPURACIÓN"
 FIXED_COLLISIONS = "Colisiones Arregladas"
 LUA_PROFILER = "Perfilador de Lua"
+CTX_PROFILER = "Perfilador de Ctx"
 DEBUG_PRINT = "Mensajes de Depuración"
 DEBUG_INFO = "Información de Depuración"
 DEBUG_ERRORS = "Errores de Depuración"
