--- a/lang/French.ini
+++ b/lang/French.ini
@@ -232,6 +232,7 @@ PLAY_VANILLA_DEMOS = "Jouer les démos"
 DEBUG_TITLE = "DÉBOGAGE"
 FIXED_COLLISIONS = "Collisions Améliorées"
 LUA_PROFILER = "Profileur Lua"
+CTX_PROFILER = "Profileur Ctx"
 DEBUG_PRINT = "Affichage du Débogage"
 DEBUG_INFO = "Infos de Débogage"
 DEBUG_ERRORS = "Erreurs de Débogage"
