--- a/lang/German.ini
+++ b/lang/German.ini
@@ -232,6 +232,7 @@ PLAY_VANILLA_DEMOS = "Vanilla Demos spielen"
 DEBUG_TITLE = "DEBUG"
 FIXED_COLLISIONS = "Feste Kollision"
 LUA_PROFILER = "Lua Profiler"
+CTX_PROFILER = "Ctx Profiler"
 DEBUG_PRINT = "Debug Druck"
 DEBUG_INFO = "Debug Info"
 DEBUG_ERRORS = "Debug Fehler"
