--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -232,6 +232,7 @@ PLAY_VANILLA_DEMOS = "Tocar Demos do Vanilla"
 DEBUG_TITLE = "DEBUG"
 FIXED_COLLISIONS = "Colisão Consertada"
 LUA_PROFILER = "Lua Profiler"
+CTX_PROFILER = "Ctx Profiler"
 DEBUG_PRINT = "Debug Print"
 DEBUG_INFO = "Debug Info"
 DEBUG_ERRORS = "Debug Errors"
