Added Toad default palette + other palette tweaks (#370)

--- a/lang/French.ini
+++ b/lang/French.ini
@@ -323,6 +323,7 @@ RASPBERRY = "Framboise"
 BUBBLEGUM = "Bubblegum"
 ICE_MARIO = "Mario de glace"
 ICE_LUIGI = "Luigi de glace"
+TOAD = "Toad"
 CUSTOM = "Personnalisée"
 
 [PLAYER_LIST]
