--- a/lang/German.ini
+++ b/lang/German.ini
@@ -323,6 +323,7 @@ RASPBERRY = "Himbeere"
 BUBBLEGUM = "Kaugummi"
 ICE_MARIO = "Eis Mario"
 ICE_LUIGI = "Eis Luigi"
+TOAD = "Toad"
 CUSTOM = "Selbstgemacht"
 
 [PLAYER_LIST]
