--- a/lang/Italian.ini
+++ b/lang/Italian.ini
@@ -320,6 +320,7 @@ RASPBERRY = "Mora"
 BUBBLEGUM = "Gomma da Masticare"
 ICE_MARIO = "Mario Ghiaccio"
 ICE_LUIGI = "Luigi Ghiaccio"
+TOAD = "Toad"
 CUSTOM = "Personalizzato"
 
 [PLAYER_LIST]
