--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -323,6 +323,7 @@ RASPBERRY = "Framboesa"
 BUBBLEGUM = "Chiclete"
 ICE_MARIO = "Mario de Gelo"
 ICE_LUIGI = "Luigi de Gelo"
+TOAD = "Toad"
 CUSTOM = "Customizado"
 
 [PLAYER_LIST]
