--- a/lang/Russian.ini
+++ b/lang/Russian.ini
@@ -322,6 +322,7 @@ RASPBERRY = "Малина"
 BUBBLEGUM = "Жвачка"
 ICE_MARIO = "Ледяной Марио"
 ICE_LUIGI = "Ледяной Луиджи"
+TOAD = "Тоад"s
 CUSTOM = "Свой"
 
 [PLAYER_LIST]
