--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -323,6 +323,7 @@ RASPBERRY = "Frambuesa"
 BUBBLEGUM = "Chicle"
 ICE_MARIO = "Mario de Hielo"
 ICE_LUIGI = "Luigi de Hielo"
+TOAD = "Toad"
 CUSTOM = "Personalizada"
 
 [PLAYER_LIST]
