--- a/lang/English.ini
+++ b/lang/English.ini
@@ -323,6 +323,7 @@ RASPBERRY = "Raspberry"
 BUBBLEGUM = "Bubblegum"
 ICE_MARIO = "Ice Mario"
 ICE_LUIGI = "Ice Luigi"
+TOAD = "Toad"
 CUSTOM = "Custom"
 
 [PLAYER_LIST]
