--- a/lang/English.ini
+++ b/lang/English.ini
@@ -338,6 +338,7 @@ MASTER_VOLUME = "Master Volume"
 MUSIC_VOLUME = "Music Volume"
 SFX_VOLUME = "Sfx Volume"
 ENV_VOLUME = "Env Volume"
+FADEOUT = "Fadeout Distant Sounds"
 
 [LANGUAGE]
 LANGUAGE = "LANGUAGE"
