--- a/lang/Italian.ini
+++ b/lang/Italian.ini
@@ -335,6 +335,7 @@ MASTER_VOLUME = "Principale"
 MUSIC_VOLUME = "Musica"
 SFX_VOLUME = "Effetti sonori"
 ENV_VOLUME = "Ambiente"
+FADEOUT = "Suoni lontani in dissolvenza"
 
 [LANGUAGE]
 LANGUAGE = "LINGUA"
