--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -338,6 +338,7 @@ MASTER_VOLUME = "Volume Geral"
 MUSIC_VOLUME = "Volume da Música"
 SFX_VOLUME = "Volume dos Efeitos"
 ENV_VOLUME = "Volume Ambiente"
+FADEOUT = "Desaparecimento do som com a distância"
 
 [LANGUAGE]
 LANGUAGE = "IDIOMA"
