--- a/lang/Czech.ini
+++ b/lang/Czech.ini
@@ -338,6 +338,7 @@ MASTER_VOLUME = "Hlavní hlasitost"
 MUSIC_VOLUME = "Hlasitost písničky"
 SFX_VOLUME = "Hlasitost zvuků"
 ENV_VOLUME = "Hlasitost prostředí"
+FADEOUT = "Fadeout Distant Sounds"
 
 [LANGUAGE]
 LANGUAGE = "JAZYK"
