--- a/lang/German.ini
+++ b/lang/German.ini
@@ -338,6 +338,7 @@ MASTER_VOLUME = "Hauptlautstärke"
 MUSIC_VOLUME = "Musik Lautstärke"
 SFX_VOLUME = "Geräusch Lautstärke"
 ENV_VOLUME = "Env Lautstärke"
+FADEOUT = "Entfernte Geräusche Ausblenden"
 
 [LANGUAGE]
 LANGUAGE = "SPRACHE"
