Translate SOUND:FADEOUT to Czech (#415)

--- a/lang/Czech.ini
+++ b/lang/Czech.ini
@@ -338,7 +338,7 @@ MASTER_VOLUME = "Hlavní hlasitost"
 MUSIC_VOLUME = "Hlasitost písničky"
 SFX_VOLUME = "Hlasitost zvuků"
 ENV_VOLUME = "Hlasitost prostředí"
-FADEOUT = "Fadeout Distant Sounds"
+FADEOUT = "Ztišit daleké zvuky"
 
 [LANGUAGE]
 LANGUAGE = "JAZYK"
